Added social media share for Facebook, Twitter(X) and Linkedin

--- a/posts/templates/post_detail.html
+++ b/posts/templates/post_detail.html
@@ -1,4 +1,6 @@
 {% extends 'base.html' %}
+{%  load static %}
+{% load social_share %}
 
 {% block main %}
     <main>
@@ -13,6 +15,13 @@
 
                 <p class="text-right">Posted by <b>{{ post.author.first_name }} {{ post.author.last_name }}</b> on <b>{{ post.date|date:"F d, Y" }}</b></p>
                 <hr>
+
+                <div class="social-sharing text-left">
+                    <h4>Share this article:</h4>
+                    {% post_to_facebook request.build_absolute_uri %}
+                    {% post_to_twitter request.build_absolute_uri %}
+                    {% post_to_linkedin request.build_absolute_uri %} {# Requires the App to be registered with linkedin #}
+                </div>
 
                 <h2>Comments</h2>
 
@@ -34,7 +43,6 @@
                         <button type="submit">Submit</button>
                     </form>
                 </div>
-
             </div>
         </div>
     </main>
