--- a/static/css/header_and_footer.css
+++ b/static/css/header_and_footer.css
@@ -8,6 +8,15 @@
   height: 55px;
 }
 
+.logo-img {
+    position: absolute;
+    top: 1px;
+    left: 5px;
+    /*overflow: hidden;*/
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+}
 
 .logo-link {
   color: var(--light-black);
@@ -106,7 +115,6 @@
   border-radius: 50%;
   transform: translateX(-50%) translateY(50%) scale(1);
   transition: 0.3s ease-in-out;
-  color: --light-grey;
   font-family: var(--header-shop);
   border: var(--black) 2px solid;
 }
@@ -135,13 +143,6 @@
   }
 }
 
-@media (min-width: 1) {
-  .navigation__link:hover .circle {
-    height: 140px;
-    width: 140px;
-    font-size: 4.5rem;
-  }
-}
 
 .blog-link {
   color: var(--white);
@@ -149,7 +150,7 @@
   font-weight: 700;
   position: absolute;
   top: 10px;
-  left: 15px;
+  left: 70px;
 }
 
 .login-link {
@@ -163,18 +164,20 @@
 
 /* "active" class */
 .active {
-  height: 50px;
-  width: 50px;
+  height: 70px;
+  width: 70px;
   bottom: 40%;
-  font-size: 3rem;
+  font-size: 2.5rem;
   font-weight: 800;
   color: var(--black);
+  text-shadow: -1px 0 white, 0 1px white, 1px 0 white, 0 -1px white;
+
 }
 
 @media (min-width: 768px) {
   .active {
-    height: 100px;
-    width: 100px;
+    height: 120px;
+    width: 120px;
     font-size: 4rem;
   }
 }
