--- a/static/css/header_and_footer.css
+++ b/static/css/header_and_footer.css
@@ -1,3 +1,149 @@
+/* Header and footer common styles*/
+.header-footer-common {
+    font-family: 'Play', sans-serif;
+    text-align:center;
+    padding:20px 0;
+}
+
+.header-footer-common .row{
+    width:100%;
+    color: rgb(128, 128, 128);
+    font-size:0.8em;
+}
+
+.header-footer-common .row a{
+    text-decoration:none;
+    color: rgb(128, 128, 128);
+    transition:0.5s;
+}
+
+.header-footer-common .row a:hover{
+    color:#fff;
+}
+
+.header-footer-common .row ul{
+    width:100%;
+}
+
+.header-footer-common .row ul li{
+    display:inline-block;
+    margin:0 30px;
+}
+
+/*/* Hamburger menu */
+.top-nav {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  padding-right: 1em;
+}
+
+.menu {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    justify-content: center;
+}
+
+.menu > li {
+  /*margin: 0 1rem;*/
+  overflow: hidden;
+}
+
+.menu-button-container {
+  display: none;
+  height: 100%;
+  width: 30px;
+  cursor: pointer;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+#menu-toggle {
+  display: none;
+}
+
+.menu-button,
+.menu-button::before,
+.menu-button::after {
+  display: block;
+  background-color: #fff;
+  position: absolute;
+  height: 4px;
+  width: 30px;
+  transition: transform 400ms cubic-bezier(0.23, 1, 0.32, 1);
+  border-radius: 2px;
+}
+
+.menu-button::before {
+  content: '';
+  margin-top: -8px;
+}
+
+.menu-button::after {
+  content: '';
+  margin-top: 8px;
+}
+
+#menu-toggle:checked + .menu-button-container .menu-button::before {
+  margin-top: 0px;
+  transform: rotate(405deg);
+}
+
+#menu-toggle:checked + .menu-button-container .menu-button {
+  background: rgba(255, 255, 255, 0);
+}
+
+#menu-toggle:checked + .menu-button-container .menu-button::after {
+  margin-top: 0px;
+  transform: rotate(-405deg);
+}
+
+@media (max-width: 700px) {
+  .menu-button-container {
+    display: flex;
+  }
+  .menu {
+    position: absolute;
+    top: 0;
+    margin-top: 50px;
+    left: 0;
+    flex-direction: column;
+    width: 100%;
+    /*justify-content: center;*/
+    /*align-items: center;*/
+  }
+  #menu-toggle ~ .menu li {
+    height: 0;
+    margin: 0;
+    padding: 0;
+    border: 0;
+    transition: height 400ms cubic-bezier(0.23, 1, 0.32, 1);
+  }
+  #menu-toggle:checked ~ .menu li {
+    border: 1px solid #333;
+    height: 2.5em;
+    padding: 0.5em;
+    transition: height 400ms cubic-bezier(0.23, 1, 0.32, 1);
+  }
+  .menu > li {
+    display: flex;
+    justify-content: center;
+    margin: 0;
+    padding: 0.5em 0;
+    width: 100%;
+    color: white;
+    background-color: #222;
+  }
+  .menu > li:not(:last-child) {
+    border-bottom: 1px solid #444;
+  }
+}
+
+
 /* Header*/
 .header-fixed {
   position: fixed;
@@ -5,198 +151,40 @@
   width: 100%;
   z-index: 100;
   background-color: var(--light-black);
-  height: 55px;
 }
 
 .logo-img {
     position: absolute;
     top: 1px;
     left: 5px;
-    /*overflow: hidden;*/
     border-radius: 50%;
     width: 50px;
     height: 50px;
 }
 
-.logo-link {
-  color: var(--light-black);
-  text-shadow: -1px 0 white, 0 1px white, 1px 0 white, 0 -1px white;
-  font-size: 30px;
-  display: inline-block;
-  font-family: var(--header-shop);
-  background-color: var(--light-grey);
-  border-radius: 50% 50% 50% 50%;
-  width: 20rem;
-  height:40px;
-  border: var(--white) 2px solid;
-  margin-top: 13px;
-}
-
-@media (min-width: 768px) {
-  .logo-link {
-    font-size: 55px;
-    width: 25rem;
-    height:75px;
-    margin-top: 0;
-  }
-}
-
-.header__text {
-  background-color: var(--light-black);
-  padding: 7rem 0 1rem 0;
-  color: var(--light-grey);
-  font-size: 1rem;
-  align-items: flex-end;
-  font-family: var(--header-shop);
-  line-height: 1rem;
-}
-
-@media (min-width: 768px) {
-  .header__text {
-    font-size: 2rem;
-    padding-top: 10rem;
-  }
-}
-
-@media (min-width: 1023px) {
-  .header__text {
-    font-size: 3rem;
-  }
-}
-
-/* Navigation */
-.navigation {
-  left: 50%;
-  transform: translateX(-50%);
-  display: flex;
-  gap: 20rem;
-}
-
-@media (min-width: 768px) {
-  .navigation {
-    gap: 30rem;
-  }
-}
-
-.header__navigation {
-  top: 55px;
-}
-
-.footer-navigation {
-  bottom: 10rem;
-}
-
-.navigation__link {
-  color: var(--light-grey);
-  font-weight: 700;
-  font-size: 1.5rem;
-  transition: 0.3s ease-in-out;
-  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
-}
-
-@media (min-width: 768px) {
-  .navigation__link {
-    font-size: 2rem;
-  }
-}
-
-@media (min-width: 1023px) {
-  .navigation__link {
-    font-size: 2.7rem;
-  }
-}
-
-.circle {
-  display: flex;
-  bottom: 50%;
-  width: 50px;
-  height: 50px;
-  background-color: var(--orange);
-  border-radius: 50%;
-  transform: translateX(-50%) translateY(50%) scale(1);
-  transition: 0.3s ease-in-out;
-  font-family: var(--header-shop);
-  border: var(--black) 2px solid;
-}
-
-@media (min-width: 768px) {
-  .circle {
-    width: 80px;
-    height: 80px;
-  }
-}
-.navigation__link:hover .circle {
-  height: 70px;
-  width: 70px;
-  bottom: 40%; /* Adjust the positioning to center the expanded circle */
-  font-size: 2.5rem;
-  font-weight: 800;
-  color: var(--black);
-  text-shadow: -1px 0 white, 0 1px white, 1px 0 white, 0 -1px white;
-}
-
-@media (min-width: 768px) {
-  .navigation__link:hover .circle {
-    height: 120px;
-    width: 120px;
-    font-size: 4rem;
-  }
-}
-
-
-.blog-link {
-  color: var(--white);
-  font-size: 1.5rem;
-  font-weight: 700;
-  position: absolute;
-  top: 10px;
-  left: 70px;
-}
-
-.login-link {
-  color: var(--white);
-  font-size: 1.5rem;
-  font-weight: 700;
-  position: absolute;
-  top: 10px;
-  right: 15px;
-}
-
-/* "active" class */
-.active {
-  height: 70px;
-  width: 70px;
-  bottom: 40%;
-  font-size: 2.5rem;
-  font-weight: 800;
-  color: var(--black);
-  text-shadow: -1px 0 white, 0 1px white, 1px 0 white, 0 -1px white;
-
-}
-
-@media (min-width: 768px) {
-  .active {
-    height: 120px;
-    width: 120px;
-    font-size: 4rem;
-  }
-}
-
 /* Footer */
-.footer {
-    background-color: var(--light-black);
-    color: var(--white);
-    padding: 0.7rem;
+.footer{
+    background:#000;
+    text-align:center;
 }
 
-.logo__footer {
-  margin-bottom: 25px;
+.footer .row{
+    margin:1% 0;
+    padding:0.6% 0;
 }
 
-@media (min-width: 768px) {
-  .logo__footer {
-    margin-bottom: 1rem;
-  }
+.footer .row a i{
+font-size:2em;
+margin:0 1%;
 }
+
+@media (max-width:720px){
+    .footer .row ul li{
+        display:block;
+        text-align:left;
+        padding: 1rem;
+    }
+}
+
 
 
