--- a/utilities/templates/contact.html
+++ b/utilities/templates/contact.html
@@ -2,21 +2,20 @@
 
 {% block main %}
       <!-- Main Content Section -->
-    <form>
-        <div class="contact-input">
+    <form class="form">
+        <div class="contact-container">
             <main>
                 <div>
-                    <input type="text" name="name" id="name" placeholder="Name">
+                    <input class="contact-input" type="text" name="name" placeholder="Name">
                 </div>
                 <div>
-                    <input type="email" name="email" id="email" placeholder="Email">
-                    <input type="tel" name="phone" id="phone" placeholder="Phone">
+                    <input class="contact-input" type="email" name="email" placeholder="Email">
                 </div>
                 <div>
-                    <textarea name="message" id="message" cols="30" rows="10" placeholder="Message"></textarea>
+                    <textarea class="contact-input" name="message" cols="30" rows="10" placeholder="Message"></textarea>
                 </div>
                 <div>
-                    <input type="submit" value="Send">
+                    <input class="contact-submit" type="submit" value="Send">
                 </div>
             </main>
         </div>
