--- a/static/css/contact.css
+++ b/static/css/contact.css
@@ -1,60 +1,51 @@
 /* Contact */
 .contact-container{
     display: flex;
+    flex-direction: column;
     background-color: var(--lighter-grey);
     box-shadow: 0px 5px 15px 0px rgba(112,112,112,0.59);
     border-radius: 1rem;
     max-width: 95%;
     padding: 20px;
-    margin: 3rem 1rem;
+    margin: 5rem 1rem;
     justify-content: center;
+    align-items: center;
     text-align: center;
 }
 
 @media (min-width: 768px) {
   .contact-container {
-      padding: 5rem 20rem;
-      margin: 10rem;
+      padding: 5rem 0rem;
+      margin: 10rem 20rem;
       max-width: 80%;
   }
 }
 
-.form {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.contact-container main {
-  display: flex;
-  flex-direction: column;
-  gap: 15px;
-}
-
 .contact-input {
-  width: 100%;
   padding: 3px;
   border-radius: 5px;
   outline: none;
 }
 
 .contact-submit {
-  background-color: #007BFF;
-  color: #fff;
-  padding: 10px;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-  transition: background-color 0.3s;
+    width: 100%;
+    background-color: #007BFF;
+    color: #fff;
+    padding: 10px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
+
+@media (min-width: 768px) {
+  .contact-submit {
+    max-width: 10%;
+  }
 }
 
 .contact-submit:hover {
   background-color: #0056b3;
 }
 
-@media (max-width: 768px) {
-  .contact-submit {
-    max-width: 90%;
-  }
-}
 
