--- a/static/css/globals.css
+++ b/static/css/globals.css
@@ -101,13 +101,13 @@ body {
 }
 
 .post__button {
-    display: block; /* Set the display to block to allow centering */
+    display: block;
     background-color: var(--light-black);
     color: var(--white);
     padding: 2rem;
     border-radius: 5rem;
     border: none;
-    margin: 0 auto; /* Center the button horizontally */
+    margin: 0 auto;
     margin-top: 1rem;
     box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.5);
     font-weight: 800;
@@ -116,4 +116,54 @@ body {
 
 .post__button:hover {
     background-color: var(--orange);
+}
+
+/* Forms -Contact & Create post- */
+.form-container{
+    display: flex;
+    flex-direction: column;
+    background-color: var(--lighter-grey);
+    box-shadow: 0px 5px 15px 0px rgba(112,112,112,0.59);
+    border-radius: 1rem;
+    max-width: 95%;
+    padding: 20px;
+    margin: 5rem 1rem;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+
+@media (min-width: 768px) {
+  .form-container {
+      padding: 5rem 0rem;
+      margin: 10rem 20rem;
+      max-width: 80%;
+  }
+}
+
+.form-input {
+  padding: 3px;
+  border-radius: 5px;
+  outline: none;
+}
+
+.form-submit {
+    width: 100%;
+    background-color: #007BFF;
+    color: #fff;
+    padding: 10px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
+
+@media (min-width: 768px) {
+  .form-submit {
+    max-width: 10%;
+  }
+}
+
+.form-submit:hover {
+  background-color: #0056b3;
 }
